--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+
+    "build:web": "expo export -p web",
+    "preview:web": "npx serve dist -s",
+    "deploy:netlify": "npx netlify deploy --prod --dir=dist"
+    
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
